--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>Descargar TikTok</title>
+  <title>TT Downloader</title>
 </head>
 <body>
-    <h1>Descarga de videos TikTok</h1>
-    <p>Pega el enlace del video de TikTok abajo:</p>
-
-    <form action="/download" method="post">
-        <label>Link del video de TikTok:</label><br>
-        <input type="text" name="url" placeholder="https://www.tiktok.com/..."><br><br>
-        <input type="submit" value="Descargar">
-    </form>
+  <h1>Descargar Video</h1>
+  <form method="POST" action="/">
+    <input type="text" name="url" placeholder="Pega el link aquí" required>
+    <button type="submit">Descargar</button>
+  </form>
 </body>
 </html>
+
 
 
