--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,11 +6,12 @@
 <body>
   <h1>Descargar Video</h1>
   <form method="POST" action="/">
-    <input type="text" name="url" placeholder="Pega el link aquí" required>
+    <input type="text" name="url" placeholder="Pega el link aquí" required style="width:300px;">
     <button type="submit">Descargar</button>
   </form>
 </body>
 </html>
+
 
 
 
